# coinbase-data-pipeline

./: LICENSE  README.md  main.py  pyproject.toml
configs/: crypto_pipeline_config.py
dags/: crypto_pipeline_dag.py
scripts/: upload_directory_to_s3.sh  upload_to_s3.sh
spark_jobs/: process_crypto_data_spark.py
utils/: collect_coinbase_data.py
